gui和剧本描述测试

--- a/localisation/simp_chinese/bookmarks_l_simp_chinese.yml
+++ b/localisation/simp_chinese/bookmarks_l_simp_chinese.yml
@@ -1,5 +1,5 @@
 ﻿l_simp_chinese:
- BM_HISTORY_TITLE: "历史简介"
+ BM_HISTORY_TITLE: "简介"
  GATHERING_STORM_NAME: "——未选中——"
  GATHERING_STORM_DESC: "__EMPTY__"
  HITTING_FAN_NAME: ""
@@ -20,8 +20,8 @@
  RAJ_GATHERING_STORM_DESC: "作为大英帝国皇冠上的耀眼明珠，英属印度是一个既彰显帝国权势，却同时也暴露帝国软肋的奇怪复合体。一小部分英国公务员的精英不仅统治着这个臣民数亿、幅员辽阔的次大陆，同时还从其中征召组建了在上次世界大战中骁勇作战的英印军队。\n\n印度的领袖们曾寄希望于上次世界大战中所付出的牺牲，能帮助他们从英国手中换取独立，但目前来看，这一希望显然已经落空。随着一场新的战争渐露端倪，许多印度人认为如今是时候去夺取自由了——不择一切手段。"
  SWI_GATHERING_STORM_DESC: "在相互尊重、相互扶持的原则基础上，瑞士有着令人瞩目的文化多元以及政治分权。正因如此，纵是放眼欧洲列国，这个国家都是独一无二的存在。\n\n有赖于坚定的中立，瑞士在上次世界大战中免遭战火摧残。不过，在旁目睹大战之惨烈，也让他们更加意识到坚决自卫的必要性。随着战争阴云的迫近，这个和平的国家必须就是否继续维持中立做出抉择。如若武装中立已不再能威慑潜在的侵略者，那瑞士或不得不屈身与某一邻国构建盟约——亦或是在敌国入侵之前先发制人。"
  SWI_BLITZKRIEG_DESC: "即便是在德奥合并之前，瑞士的局势就已十分紧张，更别说是在德意志国尝到轻松吞并德语区领土后的现在了。真正的威胁正愈发迫近这个和平的山巅之国，现在，瑞士的绝对中立将受到前所未有的严峻考验，若是稍有差池，或许，甚至是防卫能力亦要接受风暴的洗礼。"
- BLITZKRIEG_NAME: "闪电战"
- BLITZKRIEG_DESC: "在过去的几年里，整个世界见证了几场新的战争在欧亚大陆相继爆发。现在，西班牙已落入了民族主义者的手中。日本为了领土与苏联和中国大打出手，并在与后者的战争中势头更盛。而对于欧洲其他国家而言，苏德两国新近签订的互不侵犯条约，则或许是个坏消息。"
+ BLITZKRIEG_NAME: "error————阴影之中————error"
+ BLITZKRIEG_DESC: "ERROR!!!WARNING!!!"
  ENG_BLITZKRIEG_DESC: "尽管联合王国在上次世界大战中艰难取胜，但这个伟大帝国的根基显然已经动摇。不仅整个国家最优秀的一代青年才俊捐躯于佛兰德及北法的泥泞战壕，地区动荡与债台高筑的阴影，也早已投射于英联邦庞大的躯体之上。\n\n如今，上一场战争的创痛尚未从人们记忆中淡去，一场新的战争又已经迫近到了这个国家的面前。现实正日益明晰，所谓“我们时代的和平”，根本就不存在。"
  FRA_BLITZKRIEG_DESC: "上次世界大战的惨痛记忆尚未淡去，在德国公然表示无意维系和平后，法兰西即将面临又一场新的战争。而加强边境的防御，明智地选择盟友，对法国而言则是避免灾难性战事的关键所在。\n\n既然骄傲的法兰西打赢了上一场战争，那么这一次，也定将如此！"
  GER_BLITZKRIEG_DESC: "随着德国军队重返莱茵兰，法国人和英国人对我们的意图愈发起疑。不过眼下，慕尼黑协定已经默许了德国为保护当地德裔的利益而吞并苏台德；莫洛托夫-里宾特洛甫条约则确保了苏德两国间的互不侵犯，并对双方如何瓜分波兰做出了协商。\n\n诚可谓万事俱备，德意志已为此时此刻等待了太久，奋起之机就是现在！"
@@ -95,7 +95,14 @@
  COG_BLITZKRIEG_DESC: "随着意大利对阿比西尼亚的征服告一段落，德意志第三帝国在欧洲获得新领土，局势变得危险。意大利的殖民野心不仅限于东非，很可能在不久的将来威胁到我们，而希特勒则积极瞄准我们的比利时宗主国，作为他们欧洲大陆霸权计划的一部分。\n\n看起来战争很快就会波及我们，如果我们不先发制人地对他们发动攻击的话……"
  AFRICA_NAME: "§W非洲§!"
  ASIA_NAME: "§W亚洲§!"
- EUROPR_NAME: "§W欧洲§!"
+ EUROPR_NAME: "§W欧罗巴之吻§!"
+ EUROPR_DESC: "@cnm@cnm欧罗巴，这位饱经沧桑的母亲，步履沉重地挣脱了旧世纪锈迹斑斑的铁链与蒙昧的裹尸布。她身上仍残留着煤烟、战壕的泥泞与帝国黄昏的余晖，跌跌撞撞地闯入了新世纪的晨曦。然而，往昔的幽灵并未消散，反而在新生的光晕里投下更长的阴影。\n@cnm@cnm双头鹰与鸢尾花西的恩怨仍是欧罗巴母亲的心头之患，二者之间那纠缠百年的恩怨情仇，如同深嵌在母亲心口的旧伤，在新纪元的微风中隐隐作痛，仍是心头一块沉甸甸、难以化解的顽石。而华沙与莫斯科的歌谣，这两首交织着血泪、征服与反抗的古老歌谣，旋律从未真正停歇。它们蛰伏于历史的冰层之下，如今，在新世纪初升的阳光或是寒流刺激下，正隐隐震动大地，酝酿着再次响彻云霄的序曲。\n@cnm@cnm资本的洪流在精美的器皿间流淌，却悄然冲刷着古老的基石与道德的堤岸。欧罗巴深沉的灵魂，那曾经孕育过理性光辉、人文火炬与不屈意志的灵魂，在这金碧辉煌的浮华与冰冷的算计中，正不可遏制地滑向享乐、麻木与虚无的深渊，堕落的气息在光鲜的外表下弥漫，欧罗巴深处的灵魂正在堕落。\n@cnm@cnm新世纪的第一缕阳光，是生命之花再次绽放的养料，亦或是死亡的最后一个警告。也许，这新世纪的黎明，不过是旧日黄昏的回光返照？答案，沉重地悬在每一个清晨的薄雾之中。\n"
  MIDDLEEAST_NAME: "§W中东§!"
  NORTHAMERICA_NAME: "§W北美§!"
  SOUTHAMERICA_NAME: "§W南美§!"
+ AFRICA_NA: "§W非洲§!"
+ ASIA_NA: "§W亚洲§!"
+ EUROPR_NA: "§W欧洲§!"
+ MIDDLEEAST_NA: "§W中东§!"
+ NORTHAMERICA_NA: "§W北美§!"
+ SOUTHAMERICA_NA: "§W南美§!"
